HangFire -> Hangfire everywhere

--- a/_posts/2014-05-02-hangfire-0.8-released.md
+++ b/_posts/2014-05-02-hangfire-0.8-released.md
@@ -1,17 +1,17 @@
 ---
 layout: post
-title: HangFire 0.8 Released
+title: Hangfire 0.8 Released
 ---
 
-Today I've pushed the [next version](https://github.com/odinserj/HangFire/releases/tag/v0.8) of [HangFire](http://hangfire.io) project that allows to process background jobs inside ASP.NET applications in a reliable way.
+Today I've pushed the [next version](https://github.com/odinserj/Hangfire/releases/tag/v0.8) of [Hangfire](http://hangfire.io) project that allows to process background jobs inside ASP.NET applications in a reliable way.
 
-Although this release contains only one new feature that is visible for all users (security improvements), it brings HangFire closer than ever to the version 1.0. But let's see the new changes.
+Although this release contains only one new feature that is visible for all users (security improvements), it brings Hangfire closer than ever to the version 1.0. But let's see the new changes.
 
 **Note.** *The conceptual part of the following information is correct, but implementation details changed since version 1.0. Please, see the [documentation](http://docs.hangfire.io) instead of relying this information.*
 
 ### Remote requests are denied by default
 
-HangFire has integrated monitoring system that shows you information about background jobs and acts as an ASP.NET's `IHttpHandler`. Registration is performed by automatically changing the `web.config` file during the installation of the [`HangFire.Web`](https://www.nuget.org/packages/HangFire.Web/) package (it is a dependency of [`HangFire`](https://www.nuget.org/packages/HangFire/) bootstrap package) by NuGet Package Manager.
+Hangfire has integrated monitoring system that shows you information about background jobs and acts as an ASP.NET's `IHttpHandler`. Registration is performed by automatically changing the `web.config` file during the installation of the [`Hangfire.Web`](https://www.nuget.org/packages/Hangfire.Web/) package (it is a dependency of [`Hangfire`](https://www.nuget.org/packages/Hangfire/) bootstrap package) by NuGet Package Manager.
 
 This HTTP handler displays the internals of your application. Furthermore it offers to interact with this internal state: background jobs can be retried, possibly removed, scheduled earlier than necessary and so on. What if it become available for malicious users? It is hard to guess the actual consequences for a wide range of applications, but it is simple to understand that this behavior is highly undesirable.
 
@@ -23,7 +23,7 @@ The simplest solution is to block all remote requests by default using the `Requ
 
 The policy can be configured from the `appSettings` section of `web.config` file – I don't want to introduce separate configuration section for a single setting.
 
-Disable remote access to HangFire Monitor (by default):
+Disable remote access to Hangfire Monitor (by default):
 
 ```xml
 <appSettings>
@@ -33,7 +33,7 @@ Disable remote access to HangFire Monitor (by default):
 </appSettings>
 ```
 
-Enable remote access to HangFire Monitor:
+Enable remote access to Hangfire Monitor:
 
 ```xml
 <appSettings>
@@ -52,7 +52,7 @@ Elmah library author and contributors conducted a deep investigation on a topic 
 2. The location element's path attribute carries the same value as the path attribute of the handler registrations. Unfortunately, it has to be repeated so if you change one, the others must be updated to match.
 3. The authorization element is where the authorization rules go and where you will want to selectively grant access.
 
-So, starting from this version, HangFire Monitor HTTP handler is being registered under the `location` tag:
+So, starting from this version, Hangfire Monitor HTTP handler is being registered under the `location` tag:
 
 ```xml
 <location path="hangfire.axd" inheritInChildApplications="false">
@@ -63,7 +63,7 @@ So, starting from this version, HangFire Monitor HTTP handler is being registere
   </system.web>
   <system.webServer>
     <handlers>
-      <add name="HangFire" path="hangfire.axd" verb="*" type="HangFire.Web.HangFirePageFactory, HangFire.Web" />
+      <add name="Hangfire" path="hangfire.axd" verb="*" type="Hangfire.Web.HangfirePageFactory, Hangfire.Web" />
     </handlers>
   </system.webServer>
 </location>
@@ -83,10 +83,10 @@ But to enable these rules, you need to set-up [ASP.NET Authentication](http://ms
 
 ### Moving closer to 1.0
 
-This version contains 300+ new unit tests, their total number is 550, and the test coverage of `HangFire.Core.dll` is 99%. Although this does not say that HangFire is 100% bug-free, this is an indicator of the fact that the most code is tested and it is fully unit testable. New features can be added much faster. To do this, I've completely rewritten the Server subsystem that resulted in a more clean application model.
+This version contains 300+ new unit tests, their total number is 550, and the test coverage of `Hangfire.Core.dll` is 99%. Although this does not say that Hangfire is 100% bug-free, this is an indicator of the fact that the most code is tested and it is fully unit testable. New features can be added much faster. To do this, I've completely rewritten the Server subsystem that resulted in a more clean application model.
 
-Full unit testability was one of the goals I wanted to achieve, and the fact that it requires a lot of breaking changes stopped me even to think about production-ready version. I want to use [semantic versioning](http://semver.org) and do not want to have HangFire 28.0 in a few months.
+Full unit testability was one of the goals I wanted to achieve, and the fact that it requires a lot of breaking changes stopped me even to think about production-ready version. I want to use [semantic versioning](http://semver.org) and do not want to have Hangfire 28.0 in a few months.
 
 Now I've started to think about production readiness, but I need a lot of feedback to give any stability guarantees. 
 
-Recently I've launched a new forum for HangFire to replace unnoying (for me) Google Groups – http://discuss.hangfire.io. It is modern, clean and easy to use, based on [Discourse](http://www.discourse.org). So, have ideas or problems? Let's discuss!
+Recently I've launched a new forum for Hangfire to replace unnoying (for me) Google Groups – http://discuss.hangfire.io. It is modern, clean and easy to use, based on [Discourse](http://www.discourse.org). So, have ideas or problems? Let's discuss!
