--- a/_posts/2014-05-17-hangfire-0.8.1-released.md
+++ b/_posts/2014-05-17-hangfire-0.8.1-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: HangFire 0.8.1 released
+title: Hangfire 0.8.1 released
 ---
 
 **Note.** *The following information may be outdated after 1.0 release. Please see the [official documentation](http://docs.hangfire.io) first.*
@@ -17,7 +17,7 @@ This release contains a bunch of new features, that complete the background job 
 * **Changed** - Set `InvisibleTimeout` back from 5 to 30 minutes.
 * **Changed** - `RetryAttribute` is deprecated. Use `AutomaticRetryAttribute` instead.
 
-As always, the new version of [HangFire](http://hangfire.io) can be installed via NuGet Gallery. Here is the [package list](https://www.nuget.org/packages?q=hangfire).
+As always, the new version of [Hangfire](http://hangfire.io) can be installed via NuGet Gallery. Here is the [package list](https://www.nuget.org/packages?q=hangfire).
 
 ### Deleting jobs
 
@@ -57,9 +57,9 @@ Job details page now contains *Requeue* and *Delete* buttons (other pages also h
 
 ### MSMQ support for SQL Server storage
 
-SQL Server job storage implementation does not require you to learn and install additional technologies, such as Redis, for projects to use HangFire. However, it uses polling to get new jobs that *increases latency* between the creation and invocation process (see also [this feature request](https://github.com/odinserj/HangFire/issues/52)).
+SQL Server job storage implementation does not require you to learn and install additional technologies, such as Redis, for projects to use Hangfire. However, it uses polling to get new jobs that *increases latency* between the creation and invocation process (see also [this feature request](https://github.com/odinserj/Hangfire/issues/52)).
 
-The MSMQ implementation, that was introduced in HangFire 0.8.1, replaces only the way HangFire enqueues and dequeues jobs. It uses transactional queues to delete jobs only upon successful completion, that allows to process jobs reliably inside ASP.NET applications. MSMQ queues contain **only job identifiers**, other information is still **persisted in the SQL Server database**.
+The MSMQ implementation, that was introduced in Hangfire 0.8.1, replaces only the way Hangfire enqueues and dequeues jobs. It uses transactional queues to delete jobs only upon successful completion, that allows to process jobs reliably inside ASP.NET applications. MSMQ queues contain **only job identifiers**, other information is still **persisted in the SQL Server database**.
 
 #### Advantages of using MSMQ
 
@@ -68,10 +68,10 @@ The MSMQ implementation, that was introduced in HangFire 0.8.1, replaces only th
 
 #### Installation
 
-MSMQ support for SQL Server job storage implementation, like other HangFire extensions, is a NuGet package. So, you can install it using NuGet Package Manager Console window:
+MSMQ support for SQL Server job storage implementation, like other Hangfire extensions, is a NuGet package. So, you can install it using NuGet Package Manager Console window:
 
 ```
-PM> Install-Package HangFire.SqlServer.MSMQ
+PM> Install-Package Hangfire.SqlServer.MSMQ
 ```
 
 #### Usage
@@ -94,7 +94,7 @@ To see the full list of supported paths and queues, check the [MSDN article](htt
 #### Limitations
 
 * Only transactional MSMQ queues supported for reability reasons inside ASP.NET.
-* You can not use both SQL Server Job Queue and MSMQ Job Queue implementations in the same server (see below). This limitation relates to HangFire.Server only. You can still enqueue jobs to whatever queues and watch them both in HangFire.Monitor.
+* You can not use both SQL Server Job Queue and MSMQ Job Queue implementations in the same server (see below). This limitation relates to Hangfire.Server only. You can still enqueue jobs to whatever queues and watch them both in Hangfire.Monitor.
 
 The following case will **not work**: the `critical` queue uses MSMQ, and the `default` queue uses SQL Server to store job queue. In this case job fetcher can not make the right decision.
 
@@ -115,7 +115,7 @@ server.Start();
 
 #### Transition to MSMQ queues
 
-If you have a fresh installation, just use the `UseMsmqQueues` method. Otherwise, your system may contain unprocessed jobs in SQL Server. Since one HangFire.Server instance can not process job from different queues, you should deploy two instances of HangFire.Server, one listens only MSMQ queues, another – only SQL Server queues. When the latter finish its work (you can see this from HangFire.Monitor – your SQL Server queues will be removed), you can remove it safely.
+If you have a fresh installation, just use the `UseMsmqQueues` method. Otherwise, your system may contain unprocessed jobs in SQL Server. Since one Hangfire.Server instance can not process job from different queues, you should deploy two instances of Hangfire.Server, one listens only MSMQ queues, another – only SQL Server queues. When the latter finish its work (you can see this from Hangfire.Monitor – your SQL Server queues will be removed), you can remove it safely.
 
 If you are using default queue only, do this:
 
