--- a/_posts/2014-06-07-hangfire-0.9-released.md
+++ b/_posts/2014-06-07-hangfire-0.9-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: HangFire 0.9 Released
+title: Hangfire 0.9 Released
 ---
 
 ### Recurring jobs
@@ -19,13 +19,13 @@ RecurringJob.AddOrUpdate(
     "0 12 * */2");
 ```
 
-HangFire will check the schedule each minute and enqueue recurring jobs as regular background jobs, so you receive all power of HangFire, including the full transparency, free of charge. 
+Hangfire will check the schedule each minute and enqueue recurring jobs as regular background jobs, so you receive all power of Hangfire, including the full transparency, free of charge. 
 
-HangFire Monitor was also updated and allows you to see and manage your recurring jobs:
+Hangfire Monitor was also updated and allows you to see and manage your recurring jobs:
 
 ![Recurring jobs](/img/recurring.png)
 
-So, HangFire now supports all kinds of background jobs: fire-and-forget, delayed and recurring, and let you process them with ease!
+So, Hangfire now supports all kinds of background jobs: fire-and-forget, delayed and recurring, and let you process them with ease!
 
 ### Changes
 
@@ -36,7 +36,7 @@ So, HangFire now supports all kinds of background jobs: fire-and-forget, delayed
 * **Changed** – Improve `DateTime` resolution for job arguments by including milliseconds.
 * **Changed** – Removed deprecated `RetryAttribute` class. Please, use `AutomaticRetryAttribute`.
 * **Fixed** – `KeyNotFoundException` when accessing job cancellation token with Redis.
-* **Fixed** – Theoretical race condition that makes HangFire Server invisible from Monitor.
+* **Fixed** – Theoretical race condition that makes Hangfire Server invisible from Monitor.
 
 ### Upgrading
 
@@ -48,6 +48,6 @@ Version 0.9 brings some breaking changes. Please, do the following steps to perf
 
 ### Links
 
-* [HangFire Official Site](http://hangfire.io)
-* [HangFire GitHub Project](https://github.com/odinserj/HangFire)
-* [HangFire Packages](https://www.nuget.org/packages?q=hangfire)
+* [Hangfire Official Site](http://hangfire.io)
+* [Hangfire GitHub Project](https://github.com/odinserj/Hangfire)
+* [Hangfire Packages](https://www.nuget.org/packages?q=hangfire)
