--- a/_posts/2014-06-30-hangfire-1.0-released.md
+++ b/_posts/2014-06-30-hangfire-1.0-released.md
@@ -18,7 +18,7 @@ I want to thank everyone who helped me to reach this milestone, without your par
 * **Added** – Descriptive names for background jobs in Dashboard.
 * **Added** – RabbitMQ support for SQL Server storage.
 * **Changed** – Hangfire now requires .NET Framework 4.5.
-* **Changed** – Namespaces, assemblies and packages now start with `Hangfire` (not `HangFire`).
+* **Changed** – Namespaces, assemblies and packages now start with `Hangfire` (not `Hangfire`).
 * **Changed** – `Hangfire.Core` now contains the dashboard. There is no more `Hangfire.Web`.
 * **Changed** – Common.Logging dependency package updated to 2.2.0.
 * **Changed** – Default dashboard url is now `/hangfire` (without `.axd` suffix).
@@ -45,7 +45,7 @@ PM> Uninstall-Package Hangfire.Web
 ### Breaking Changes
 
 * [Target your project](http://msdn.microsoft.com/en-us/library/bb398202.aspx) to .NET Framework 4.5 or later.
-* Replace all occurrences of `HangFire` (case-sensitive) to `Hangfire` (lowercased `f` letter) in your projects.
+* Replace all occurrences of `Hangfire` (case-sensitive) to `Hangfire` (lowercased `f` letter) in your projects.
 * Use the [`UseHangfire`](http://docs.hangfire.io/en/latest/users-guide/getting-started/owin-bootstrapper.html) extension method for OWIN app builder instead of `AspNetBackgroundJobServer`.
 * Replace all links to Dashboard from `/hangfire.axd` to `/hangfire`.
 * Change your authorization rules as [described here](http://docs.hangfire.io/en/latest/users-guide/deployment-to-production/configuring-authorization.html).
