--- a/_posts/2014-05-21-hangfire-0.8.2-released.md
+++ b/_posts/2014-05-21-hangfire-0.8.2-released.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: HangFire 0.8.2 Released
+title: Hangfire 0.8.2 Released
 ---
 
 ### Batch operations
@@ -17,14 +17,14 @@ You are also able to select all jobs in one click. Many thanks to GitHub Issues 
 
 When you write the code, it is important to have an instrument to measure the performance time. ASP.NET has different diagnostic tools for this task – [Glimpse](http://getglimpse.com), [MiniProfiler](http://miniprofiler.com) and other useful ones. But they are aimed to provide information about requests only, and almost useless for background jobs – they are being executed outside of a request.
 
-I've implemented simple diagnostic feature (and not the replacement to full-stack performance profilers, such as [dotTrace](http://www.jetbrains.com/profiler/)) for HangFire Monitor, and now you are able to see the following timings in HangFire Monitor:
+I've implemented simple diagnostic feature (and not the replacement to full-stack performance profilers, such as [dotTrace](http://www.jetbrains.com/profiler/)) for Hangfire Monitor, and now you are able to see the following timings in Hangfire Monitor:
 
 * **Duration** – job method + all filters performance time.
 * **Latency** – delay between the job creation and method invocation. This metric shows you background job invocation overhead.
 
 ![Additional metrics](/img/metrics.png)
 
-As you can see, you can also watch the delays between state transitions. All timings have minimum resolution in 1 second. This resolution caused by using unix timestamps in HangFire. We need to change the things, but a bit later.
+As you can see, you can also watch the delays between state transitions. All timings have minimum resolution in 1 second. This resolution caused by using unix timestamps in Hangfire. We need to change the things, but a bit later.
 
 These metrics are added to the `SucceededState`, so they are also available to state filters.
 
@@ -49,15 +49,15 @@ For example, in SQL Server it is better to consider using different isolation le
 
 ### Changes
 
-* **Added** - Batch operations on jobs for HangFire Monitor.
-* **Added** - Retry and delete buttons for almost every page of HangFire Monitor.
+* **Added** - Batch operations on jobs for Hangfire Monitor.
+* **Added** - Retry and delete buttons for almost every page of Hangfire Monitor.
 * **Added** - Duration and latency metrics for succeeded jobs.
 * **Added** - Display state transition latencies on job details page.
 * **Added** - DisableConcurrentExecution filter.
-* **Misc** - Tables in HangFire Monitor received some love.
+* **Misc** - Tables in Hangfire Monitor received some love.
 
 ### Links
 
-* [HangFire Official Site](http://hangfire.io)
-* [HangFire GitHub Project](https://github.com/odinserj/HangFire)
-* [HangFire Packages](https://www.nuget.org/packages?q=hangfire)
+* [Hangfire Official Site](http://hangfire.io)
+* [Hangfire GitHub Project](https://github.com/odinserj/Hangfire)
+* [Hangfire Packages](https://www.nuget.org/packages?q=hangfire)
