Use Redcarpet + Rouge

--- a/_posts/2014-05-02-hangfire-0.8-released.md
+++ b/_posts/2014-05-02-hangfire-0.8-released.md
@@ -25,22 +25,22 @@ The policy can be configured from the `appSettings` section of `web.config` file
 
 Disable remote access to Hangfire Monitor (by default):
 
-```xml
+{% highlight xml %}
 <appSettings>
   <!-- You can also remove this line to keep the default settings -->
   <add key="hangfire:EnableRemoteMonitorAccess" value="false"/>
   ...
 </appSettings>
-```
+{% endhighlight %}
 
 Enable remote access to Hangfire Monitor:
 
-```xml
+{% highlight xml %}
 <appSettings>
   <add key="hangfire:EnableRemoteMonitorAccess" value="true"/>
   ...
 </appSettings>
-```
+{% endhighlight %}
 
 ### Granting or denying access via ASP.NET authorization
 
@@ -54,7 +54,7 @@ Elmah library author and contributors conducted a deep investigation on a topic 
 
 So, starting from this version, Hangfire Monitor HTTP handler is being registered under the `location` tag:
 
-```xml
+{% highlight xml %}
 <location path="hangfire.axd" inheritInChildApplications="false">
   <system.web>
     <authorization>
@@ -67,17 +67,17 @@ So, starting from this version, Hangfire Monitor HTTP handler is being registere
     </handlers>
   </system.webServer>
 </location>
-```
+{% endhighlight %}
 
 The configuration example above denies access to all users, but that is a good starting point. You will probably want to add rules that allow access to only specific users and/or roles. For example, you might have a role for administrators and developers called admin and dev, respectively. To allow users that are members of either role, you could configure the authorization section above as follows:
 
-```xml
+{% highlight xml %}
 <authorization>  
   <allow roles="admin" />  
   <allow roles="dev" />  
   <deny users="*" />  
 </authorization>
-```
+{% endhighlight %}
 
 But to enable these rules, you need to set-up [ASP.NET Authentication](http://msdn.microsoft.com/en-us/library/vstudio/eeyk640h.aspx) using, for example, the new and shining [ASP.NET Identity](http://www.asp.net/identity) project.
 
