--- a/_posts/2014-05-21-hangfire-0.8.2-released.md
+++ b/_posts/2014-05-21-hangfire-0.8.2-released.md
@@ -35,13 +35,13 @@ This filter places a distributed lock in the beginning of a method performance a
 * SQL Server uses `sp_getapplock` stored procedure;
 * Redis implementation uses the technique described in its [documentation](http://redis.io/commands/setnx).
 
-```csharp
+{% highlight csharp %}
 [DisableConcurrentExecution(timeoutInSeconds: 10 * 60)]
 public void SomeMethod()
 {
     // Operations performed inside a distributed lock
 }
-```
+{% endhighlight %}
 
 The filter is very useful in situations when you are accessing/changing shared resources that does not provide built-in locking routines. Otherwise you should make argumentative decision between using locking system provided by the resource itself, and a custom distributed locking like this filter.
 
