--- a/_posts/2014-05-23-hangfire-0.8.3-released.md
+++ b/_posts/2014-05-23-hangfire-0.8.3-released.md
@@ -16,7 +16,7 @@ Job cancellation tokens provide `ThrowIfCancellationRequested` method that throw
 
 To use cancellation tokens, you need to add just one parameter of type `IJobCancellationToken` to a target method:
 
-```csharp
+{% highlight csharp %}
 public static void Cancelable(
     int iterationCount, 
     IJobCancellationToken token)
@@ -42,24 +42,24 @@ public static void Cancelable(
         throw;
     }
 }
-```
+{% endhighlight %}
 
 Then, create a background job:
 
-```csharp
+{% highlight csharp %}
 BackgroundJob.Enqueue(
     () => Cancelable(1000, JobCancellationToken.Null)); 
-```
+{% endhighlight %}
 
 To be able to test target methods, or to add the support of cancellation token to your old jobs, you can use the `JobCancellationToken` class:
 
-```csharp
+{% highlight csharp %}
 public void Test()
 {
     var token = new JobCancellationToken(true);
     Cancelable(10, token);
 }
-```
+{% endhighlight %}
 
 ### Hanging jobs
 
