--- a/_posts/2014-06-07-hangfire-0.9-released.md
+++ b/_posts/2014-06-07-hangfire-0.9-released.md
@@ -7,17 +7,17 @@ title: Hangfire 0.9 Released
 
 This version brings incredibly easy method of scheduling and running recurring jobs inside ASP.NET applications. You need to call only a single line of code to perform this task:
 
-```csharp
+{% highlight csharp %}
 RecurringJob.AddOrUpdate(() => Console.Write("Easy!"), Cron.Daily);
-```
+{% endhighlight %}
 
 The `Cron` class provides different easy to use methods and overloads to set up recurring jobs on a minutely, hourly, weekly, monthly and yearly basis. It is also possible to use more complex [CRON expressions](http://en.wikipedia.org/wiki/Cron#CRON_expression), since the [`NCrontab`](https://code.google.com/p/ncrontab/) library is being used to perform scheduling logic.
 
-```csharp
+{% highlight csharp %}
 RecurringJob.AddOrUpdate(
     () => Console.Write("Powerful!"), 
     "0 12 * */2");
-```
+{% endhighlight %}
 
 Hangfire will check the schedule each minute and enqueue recurring jobs as regular background jobs, so you receive all power of Hangfire, including the full transparency, free of charge. 
 
