--- a/_posts/2014-05-17-hangfire-0.8.1-released.md
+++ b/_posts/2014-05-17-hangfire-0.8.1-released.md
@@ -29,25 +29,25 @@ The operation does not provides guarantee that the job will not be performed. If
 
 If you want to delete job despite its current state, do the following:
 
-```csharp
+{% highlight csharp %}
 var jobId = BackgroundJob.Enqueue(() => Console.WriteLine("Hello, world!"));
 BackgroundJob.Delete(jobId);
 
 // or
 IBackgroundJobClient client = new BackgroundJobClient();
 client.Delete(jobId);
-```
+{% endhighlight %}
 
 If you want to be able to handle only deletion from exact state, for example, only from FailedState (because it may change after you click and before it will be deleted), you can specify it:
 
-```csharp
+{% highlight csharp %}
 var jobId = BackgroundJob.Enqueue(() => Console.WriteLine("Hello, world!"));
 BackgroundJob.Delete(jobId, FailedState.StateName);
 
 // or
 IBackgroundJobClient client = new BackgroundJobClient();
 client.Delete(jobId, ScheduledState.StateName);
-```
+{% endhighlight %}
 
 #### Manual deletion
 
@@ -70,9 +70,7 @@ The MSMQ implementation, that was introduced in Hangfire 0.8.1, replaces only th
 
 MSMQ support for SQL Server job storage implementation, like other Hangfire extensions, is a NuGet package. So, you can install it using NuGet Package Manager Console window:
 
-```
-PM> Install-Package Hangfire.SqlServer.MSMQ
-```
+    PM> Install-Package Hangfire.SqlServer.MSMQ
 
 #### Usage
 
@@ -81,13 +79,13 @@ To use MSMQ queues, you should do the following steps:
 1. Create them manually on each host. Don't forget to grant appropriate permissions.
 2. Register all MSMQ queues in current `SqlServerStorage` instance.
 
-```csharp
+{% highlight csharp %}
 var storage = new SqlServerStorage("<connection string>");
 storage.UseMsmqQueues(@".\hangfire-{0}", "critical", "default");
 // or storage.UseMsmqQueues(@".\hangfire-{0}") if you are using only "default" queue.
 
 JobStorage.Current = storage;
-```
+{% endhighlight %}
 
 To see the full list of supported paths and queues, check the [MSDN article](http://msdn.microsoft.com/en-us/library/e9d4k4ze.aspx).
 
@@ -98,7 +96,7 @@ To see the full list of supported paths and queues, check the [MSDN article](htt
 
 The following case will **not work**: the `critical` queue uses MSMQ, and the `default` queue uses SQL Server to store job queue. In this case job fetcher can not make the right decision.
 
-```csharp
+{% highlight csharp %}
 var storage = new SqlServerStorage("<connection string>");
 storage.UseMsmqQueues(@".\hangfire-{0}", "critical");
 
@@ -111,7 +109,7 @@ var options = new BackgroundJobServerOptions
 
 var server = new AspNetBackgroundJobServer(options);
 server.Start();
-```
+{% endhighlight %}
 
 #### Transition to MSMQ queues
 
@@ -119,7 +117,7 @@ If you have a fresh installation, just use the `UseMsmqQueues` method. Otherwise
 
 If you are using default queue only, do this:
 
-```csharp
+{% highlight csharp %}
 /* This server will process only SQL Server table queues, i.e. old jobs */
 
 var oldStorage = new SqlServerStorage("<connection string>");
@@ -139,11 +137,11 @@ JobStorage.Current =
 
 var server = new AspNetBackgroundJobServer();
 server.Start();
-```
+{% endhighlight %}
 
 If you use multiple queues, do this:
 
-```csharp
+{% highlight csharp %}
 /* This server will process only SQL Server table queues, i.e. old jobs */
 
 var oldStorage = new SqlServerStorage("<connection string>");
@@ -169,4 +167,4 @@ var options = new BackgroundJobServerOptions
 
 var server = new AspNetBackgroundJobServer(options);
 server.Start();
-```
+{% endhighlight %}
