--- a/_posts/2014-05-23-hangfire-0.8.3-released.md
+++ b/_posts/2014-05-23-hangfire-0.8.3-released.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: Hangfire 0.8.3 Released
+category: release
+version: 0.8.3
+author: odinserj
 ---
 
 ### Cancellation tokens
