--- a/_posts/2014-06-30-hangfire-1.0-released.md
+++ b/_posts/2014-06-30-hangfire-1.0-released.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: Hangfire 1.0 Released
+category: release
+version: 1.0.0
+author: odinserj
 ---
 
 [Hangfire](http://hangfire.io) has finally reached the `1.0` milestone! This means that public API is frozen and considered to be stable. Starting from now, the [SemVer 2.0](http://semver.org) specification will be used for versioning every package (but there may be exceptions, follow the README for each package).
