--- a/_posts/2014-12-10-hangfire-1.3.0-released.md
+++ b/_posts/2014-12-10-hangfire-1.3.0-released.md
@@ -1,7 +1,9 @@
 ---
 layout: post
 title: Hangfire 1.3.0 Released
-tags: Release Logging Debugging
+category: release
+version: 1.3.0
+author: odinserj
 ---
 
 ### Logging that just works
