--- a/_posts/2015-01-27-hangfire-1.3.2-released.md
+++ b/_posts/2015-01-27-hangfire-1.3.2-released.md
@@ -1,7 +1,9 @@
 ---
 layout: post
 title: Hangfire 1.3.2 Released
-tags: Release
+category: release
+version: 1.3.2
+author: odinserj
 ---
 
 This is a correcting release. Expiration manager does not attempt to remove all the records at once now. Instead, it removes them by 1000 at a time, so you won't experience timeout exceptions anymore. If you had problems with recurring jobs, they were fixed also.
