--- a/_posts/2015-01-29-hangfire-1.3.3-released.md
+++ b/_posts/2015-01-29-hangfire-1.3.3-released.md
@@ -1,7 +1,9 @@
 ---
 layout: post
 title: Hangfire 1.3.3 Released
-tags: Release
+category: release
+version: 1.3.3
+author: odinserj
 ---
 
 This is a correcting release. Fixed a bug related to MSMQ or RabbitMQ extensions, when enqueued job is not being processed and "stucked" in the *Enqueued* state indefinitely until we retry it manually.
