Optimize url structure, add redirects

--- a/_posts/2014-05-02-hangfire-0.8-released.md
+++ b/_posts/2014-05-02-hangfire-0.8-released.md
@@ -4,6 +4,9 @@ title: Hangfire 0.8 Released
 category: release
 version: 0.8.0
 author: odinserj
+redirect_from:
+- /release/2014/05/02/hangfire-0.8-released.html
+- /2014/05/02/hangfire-0.8-released.html
 ---
 
 Today I've pushed the [next version](https://github.com/odinserj/Hangfire/releases/tag/v0.8) of [Hangfire](http://hangfire.io) project that allows to process background jobs inside ASP.NET applications in a reliable way.
