--- a/_posts/2014-05-17-hangfire-0.8.1-released.md
+++ b/_posts/2014-05-17-hangfire-0.8.1-released.md
@@ -4,6 +4,9 @@ title: Hangfire 0.8.1 released
 category: release
 version: 0.8.1
 author: odinserj
+redirect_from:
+- /release/2014/05/17/hangfire-0.8.1-released.html
+- /2014/05/17/hangfire-0.8.1-released.html
 ---
 
 **Note.** *The following information may be outdated after 1.0 release. Please see the [official documentation](http://docs.hangfire.io) first.*
