--- a/_posts/2015-01-29-hangfire-1.3.3-released.md
+++ b/_posts/2015-01-29-hangfire-1.3.3-released.md
@@ -4,6 +4,9 @@ title: Hangfire 1.3.3 Released
 category: release
 version: 1.3.3
 author: odinserj
+redirect_from: 
+- /release/2015/01/29/hangfire-1.3.3-released.html
+- /2015/01/29/hangfire-1.3.3-released.html
 ---
 
 This is a correcting release. Fixed a bug related to MSMQ or RabbitMQ extensions, when enqueued job is not being processed and "stucked" in the *Enqueued* state indefinitely until we retry it manually.
