--- a/_posts/2015-02-04-hangfire-1.3.4-released.md
+++ b/_posts/2015-02-04-hangfire-1.3.4-released.md
@@ -4,6 +4,9 @@ title: Hangfire 1.3.4 Released
 category: release
 version: 1.3.4
 author: odinserj
+redirect_from: 
+- /release/2015/02/04/hangfire-1.3.4-released.html
+- /2015/02/04/hangfire-1.3.4-released.html
 ---
 
 This is a correcting release that fixes hourly/weekly statistics display in Dashboard, and a rare issue when we trying to cancel a recurring job from a client filter.
