--- a/_posts/2014-05-23-hangfire-0.8.3-released.md
+++ b/_posts/2014-05-23-hangfire-0.8.3-released.md
@@ -4,6 +4,9 @@ title: Hangfire 0.8.3 Released
 category: release
 version: 0.8.3
 author: odinserj
+redirect_from:
+- /release/2014/05/23/hangfire-0.8.3-released.html
+- /2014/05/23/hangfire-0.8.3-released.html
 ---
 
 ### Cancellation tokens
