--- a/_posts/2014-06-07-hangfire-0.9-released.md
+++ b/_posts/2014-06-07-hangfire-0.9-released.md
@@ -4,6 +4,9 @@ title: Hangfire 0.9 Released
 category: release
 version: 0.9.0
 author: odinserj
+redirect_from:
+- /release/2014/06/07/hangfire-0.9-released.html
+- /2014/06/07/hangfire-0.9-released.html
 ---
 
 ### Recurring jobs
