--- a/_posts/2015-01-27-hangfire-1.3.2-released.md
+++ b/_posts/2015-01-27-hangfire-1.3.2-released.md
@@ -4,6 +4,9 @@ title: Hangfire 1.3.2 Released
 category: release
 version: 1.3.2
 author: odinserj
+redirect_from: 
+- /release/2015/01/27/hangfire-1.3.2-released.html
+- /2015/01/27/hangfire-1.3.2-released.html
 ---
 
 This is a correcting release. Expiration manager does not attempt to remove all the records at once now. Instead, it removes them by 1000 at a time, so you won't experience timeout exceptions anymore. If you had problems with recurring jobs, they were fixed also.
