Add missing notes for 1.4.0-rc1

--- a/_posts/2015-04-09-hangfire-1.4.0-rc1.md
+++ b/_posts/2015-04-09-hangfire-1.4.0-rc1.md
@@ -8,12 +8,13 @@ author: odinserj
 
 ### Release Notes
 
-This is a pre-release version of Hangfire 1.4.0 that is considered to be stable (and it is more stable than 1.3.x). Final version will be released after documentation changes (some awesome features added, please [see 1.4.0-beta1](https://github.com/HangfireIO/Hangfire/releases/tag/v1.4.0-beta1)). 
+This is a pre-release version of Hangfire 1.4.0 that is considered to be stable (and it is more stable than 1.3.x). Final version will be released after documentation changes (some awesome features added, please [see 1.4.0-beta1](/blog/2015/04/06/hangfire-1.4.0-beta1.html)). 
 
 #### Hangfire.Core:
 * **Added** – Add a notice about failed jobs expiration time.
-* **Fixed** – Hangfire stops processing when storage outage was too long (#335).
+* **Added** – Show warnings in Dashboard for jobs processing by inactive servers.
+* **Fixed** – Hangfire stops processing when storage outage was too long.
 
 #### Hangfire.SqlServer
-* **Added** – Ability to pass isolation level to use in transactions, default is `serializable` (original – #213).
-* **Fixed** – Retry on deadlocks during automatic migration on server restart (#334).
+* **Added** – Ability to pass isolation level to use in transactions, default is `serializable`.
+* **Fixed** – Retry on deadlocks during automatic migration on server restart.
