Add notes about Hangfire.SqlServer 1.4.0

--- a/_posts/2015-04-13-hangfire-1.4.0.md
+++ b/_posts/2015-04-13-hangfire-1.4.0.md
@@ -8,10 +8,6 @@ author: odinserj
 
 About 4 months passed since release of version 1.3, and I'm pleased to introduce the next major release&nbsp;– Hangfire 1.4 with a lot of new features added and a lot of stability improvements made. This is the most important upgrade since version 1.0.
 
-<div class="alert alert-info">
-    <strong>Hangfire.SqlServer schema changed</strong> to version 4. Please update it first if you disabled automatic migrations.
-</div>
-
 ### New Configuration
 
 Prior to 1.4, there were a lot of classes that drove the configuration – `JobStorage`, `JobActivator`, `LogProvider` and a couple of others. And it was very hard to explore them – as this approach requires you to dig into documentation, look into different namespaces, etc. I tried to resolve this using extension methods for OWIN's `IAppBuilder` interface, however sometimes (for example, in [always running mode](http://docs.hangfire.io/en/latest/deployment-to-production/making-aspnet-app-always-running.html)) OWIN context is not applicable.
@@ -81,6 +77,14 @@ Please note you can't access parent job's return value as this requires some arc
 Dashboard was redesigned, new navigation, less colors, more accents. It also became extensible, so you can add new pages and modify navigation menus. Just look at this:
 
 [![New Dashboard](/img/new-dashboard.png)](/img/new-dashboard.png)
+
+### Hangfire.SqlServer Improvements
+
+<div class="alert alert-warning">
+    <strong>Hangfire.SqlServer schema changed</strong> to version 4. Please update it first if you disabled automatic migrations.
+</div>
+
+There are no more millions of records in the `Counter` table. All counters are aggregated into the new `AggregatedCounter` in background in a batched, non-blocking manner. Expiration Manager component was also improved by adding some indexes for tables to prevent unnecessary table scans and record blocking.
 
 ### And much more!
 
