Add a note about upgrading to 1.4

--- a/_posts/2015-04-13-hangfire-1.4.0.md
+++ b/_posts/2015-04-13-hangfire-1.4.0.md
@@ -80,12 +80,18 @@ Dashboard was redesigned, new navigation, less colors, more accents. It also bec
 
 ### Hangfire.SqlServer Improvements
 
-<div class="alert alert-warning">
-    <strong>Hangfire.SqlServer schema changed</strong> to version 4. Please update it first if you disabled automatic migrations.
-</div>
-
 There are no more millions of records in the `Counter` table. All counters are aggregated into the new `AggregatedCounter` in background in a batched, non-blocking manner. Expiration Manager component was also improved by adding some indexes for tables to prevent unnecessary table scans and record blocking.
 
 ### And much more!
 
 Please see raw release notes for versions [1.4.0-beta1](/blog/2015/04/06/hangfire-1.4.0-beta1.html), [1.4.0-rc1](/blog/2015/04/09/hangfire-1.4.0-rc1.html) and [1.4.0-rc2](/blog/2015/04/11/hangfire-1.4.0-rc2.html).
+
+### Upgrading
+
+This is a minor release (from the API point of view), and there is no breaking changes, except `Hangfire.SqlServer` schema change, that is transparent due to automatic migrations. However, if you have automatic migration disabled, the following note is for you. 
+
+<div class="alert alert-warning">
+    <strong>Hangfire.SqlServer schema changed</strong> to version 4. Please update it first if you disabled automatic migrations.
+</div>
+
+New configuration is optional for 1.x, old methods are still here, but marked with the `ObsoleteAttribute`. Old configuration methods will be removed only in 2.0, so you can postpone the configuration changes.
