Add site url for images

--- a/_posts/2015-04-13-hangfire-1.4.0.md
+++ b/_posts/2015-04-13-hangfire-1.4.0.md
@@ -76,7 +76,7 @@ Please note you can't access parent job's return value as this requires some arc
 
 Dashboard was redesigned, new navigation, less colors, more accents. It also became extensible, so you can add new pages and modify navigation menus. Just look at this:
 
-[![New Dashboard](/img/new-dashboard.png)](/img/new-dashboard.png)
+[![New Dashboard]({{ site.url }}/img/new-dashboard.png)](/img/new-dashboard.png)
 
 ### Hangfire.SqlServer Improvements
 
