Custom code highlighting for 1.4.0 notes

--- a/_posts/2015-04-13-hangfire-1.4.0.md
+++ b/_posts/2015-04-13-hangfire-1.4.0.md
@@ -14,22 +14,18 @@ Prior to 1.4, there were a lot of classes that drove the configuration – `JobS
 
 `GlobalConfiguration` class is aimed to solve these issues and provide an entry point for all configuration options (plus allowing you to define custom ones):
 
-{% highlight csharp %}
-GlobalConfiguration.Configuration
+<pre><span class="type">GlobalConfiguration</span>.Configuration
     .UseNLogLogProvider()
     .UseAutofacActivator()
-    .UseRedisStorage();
-{% endhighlight %}
+    .UseRedisStorage();</pre>
 
 OWIN's `IAppBuilder` interface extension methods were also updated and now as simple as:
 
-{% highlight csharp %}
-public void Configuration(IAppBuilder app)
+<pre><span class="keywd">public</span> <span class="keywd">void</span> Configuration(<span class="type">IAppBuilder</span> app)
 {
     app.UseHangfireServer();
     app.UseHangfireDashboard();
-}
-{% endhighlight %}
+}</pre>
 
 Previous configuration methods still working, but some of them marked with the `ObsoleteAttribute`.
 
@@ -37,16 +33,14 @@ Previous configuration methods still working, but some of them marked with the `
 
 Time zone support has been added for recurring jobs. It is based on BCL's `TimeZoneInfo` class, and the usage is pretty simple:
 
-{% highlight csharp %}
-RecurringJob.AddOrUpdate(() => Console.Write(), "15 18 * * *", TimeZoneInfo.Utc);
-// Or
-RecurringJob.AddOrUpdate(() => Console.Write(), "15 21 * * *", TimeZoneInfo.Local);
-// Or
-RecurringJob.AddOrUpdate(
-    () => Console.Write(), 
-    "15 08 * * *", 
-    TimeZoneInfo.FindSystemTimeZoneById("Hawaiian Standard Time"));
-{% endhighlight %}
+<pre><span class="type">RecurringJob</span>.AddOrUpdate(() => <span class="type">Console</span>.Write(), <span class="string">"15 18 * * *"</span>, <span class="type">TimeZoneInfo</span>.Utc);
+<span class="comm">// Or</span>
+<span class="type">RecurringJob</span>.AddOrUpdate(() => <span class="type">Console</span>.Write(), <span class="string">"15 21 * * *"</span>, <span class="type">TimeZoneInfo</span>.Local);
+<span class="comm">// Or</span>
+<span class="type">RecurringJob</span>.AddOrUpdate(
+    () => <span class="type">Console</span>.Write(), 
+    <span class="string">"15 08 * * *"</span>, 
+    <span class="type">TimeZoneInfo</span>.FindSystemTimeZoneById(<span class="string">"Hawaiian Standard Time"</span>));</pre>
 
 By default, UTC is being used to schedule recurring jobs, but this will be changed in 2.0 release to correspond other default values of other schedulers. Please note that time zone identifiers don't match between Windows and non-Windows machines.
 
@@ -54,21 +48,17 @@ By default, UTC is being used to schedule recurring jobs, but this will be chang
 
 Continuations allow you to chain multiple jobs together and run one jobs only after another's completion. This may drastically improve job composition and make your jobs re-usable.
 
-{% highlight csharp %}
-var jobId = BackgroundJob.Enqueue(() => Console.Write("Hello, "));
-BackgroundJob.ContinueWith(jobId, () => Console.WriteLine("world!"));
-{% endhighlight %}
+<pre><span class="keywd">var</span> jobId = <span class="type">BackgroundJob</span>.Enqueue(() => <span class="type">Console</span>.Write(<span class="string">"Hello, "</span>));
+<span class="type">BackgroundJob</span>.ContinueWith(jobId, () => <span class="type">Console</span>.WriteLine(<span class="string">"world!"</span>));</pre>
 
 By default, continuation will be *enqueued* after parent job completion. However, you can create a background job in any other state to implement more complex workflows:
 
-{% highlight csharp %}
-var jobId = BackgroundJob.Enqueue(() => Console.Write("Hello, "));
+<pre><span class="keywd">var</span> jobId = <span class="type">BackgroundJob</span>.Enqueue(() => <span class="type">Console</span>.Write(<span class="string">"Hello, "</span>));
 
-BackgroundJob.ContinueWith(
+<span class="type">BackgroundJob</span>.ContinueWith(
     jobId, 
-    () => Console.WriteLine("world!"), 
-    new ScheduledState(TimeSpan.Minutes(1)));
-{% endhighlight %}
+    () => <span class="type">Console</span>.WriteLine(<span class="string">"world!"</span>), 
+    <span class="keywd">new</span> <span class="type">ScheduledState</span>(<span class="type">TimeSpan</span>.Minutes(1)));</pre>
 
 Please note you can't access parent job's return value as this requires some architectural changes. Hope this will be implemented in version 2.0.
 
