Add "Hangfire Pro 1.2.0 released" post

--- a/_posts/2014-05-02-hangfire-0.8-released.md
+++ b/_posts/2014-05-02-hangfire-0.8-released.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 0.8 Released
 category: release
-version: 0.8.0
+version: Hangfire 0.8.0
 author: odinserj
 redirect_from:
 - /release/2014/05/02/hangfire-0.8-released.html
