--- a/_posts/2014-05-21-hangfire-0.8.2-released.md
+++ b/_posts/2014-05-21-hangfire-0.8.2-released.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 0.8.2 Released
 category: release
-version: 0.8.2
+version: Hangfire 0.8.2
 author: odinserj
 redirect_from:
 - /release/2014/05/21/hangfire-0.8.2-released.html
