--- a/_posts/2014-12-10-hangfire-1.3.0-released.md
+++ b/_posts/2014-12-10-hangfire-1.3.0-released.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 1.3.0 Released
 category: release
-version: 1.3.0
+version: Hangfire 1.3.0
 author: odinserj
 redirect_from:
 - /release/2014/12/10/hangfire-1.3.0-released.html
