--- a/_posts/2015-01-27-hangfire-1.3.2-released.md
+++ b/_posts/2015-01-27-hangfire-1.3.2-released.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 1.3.2 Released
 category: release
-version: 1.3.2
+version: Hangfire 1.3.2
 author: odinserj
 redirect_from: 
 - /release/2015/01/27/hangfire-1.3.2-released.html
