--- a/_posts/2015-04-06-hangfire-1.4.0-beta1.md
+++ b/_posts/2015-04-06-hangfire-1.4.0-beta1.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 1.4.0 Beta1
 category: release
-version: 1.4.0-beta1
+version: Hangfire 1.4.0-beta1
 author: odinserj
 ---
 
