--- a/_posts/2014-05-17-hangfire-0.8.1-released.md
+++ b/_posts/2014-05-17-hangfire-0.8.1-released.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 0.8.1 released
 category: release
-version: 0.8.1
+version: Hangfire 0.8.1
 author: odinserj
 redirect_from:
 - /release/2014/05/17/hangfire-0.8.1-released.html
