--- a/_posts/2015-01-29-hangfire-1.3.3-released.md
+++ b/_posts/2015-01-29-hangfire-1.3.3-released.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 1.3.3 Released
 category: release
-version: 1.3.3
+version: Hangfire 1.3.3
 author: odinserj
 redirect_from: 
 - /release/2015/01/29/hangfire-1.3.3-released.html
