--- a/_posts/2015-02-04-hangfire-1.3.4-released.md
+++ b/_posts/2015-02-04-hangfire-1.3.4-released.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 1.3.4 Released
 category: release
-version: 1.3.4
+version: Hangfire 1.3.4
 author: odinserj
 redirect_from: 
 - /release/2015/02/04/hangfire-1.3.4-released.html
