--- a/_posts/2015-04-09-hangfire-1.4.0-rc1.md
+++ b/_posts/2015-04-09-hangfire-1.4.0-rc1.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 1.4.0 RC1
 category: release
-version: 1.4.0-rc1
+version: Hangfire 1.4.0-rc1
 author: odinserj
 ---
 
