--- a/_posts/2015-04-11-hangfire-1.4.0-rc2.md
+++ b/_posts/2015-04-11-hangfire-1.4.0-rc2.md
@@ -2,7 +2,7 @@
 layout: post
 title: Hangfire 1.4.0 RC2
 category: release
-version: 1.4.0-rc2
+version: Hangfire 1.4.0-rc2
 author: odinserj
 ---
 
