Atom feed contains only excerpts now

--- a/_posts/2015-04-06-hangfire-1.4.0-beta1.md
+++ b/_posts/2015-04-06-hangfire-1.4.0-beta1.md
@@ -6,6 +6,8 @@ version: Hangfire 1.4.0-beta1
 author: odinserj
 ---
 
+This pre-release contains a lot of new features of an upcoming Hangfire 1.4.0 – continuations, time zone support for recurring jobs, new dashboard ui, new configuration classes.
+
 ### Release Notes
 
 #### Hangfire.Core
