--- a/_posts/2015-04-09-hangfire-1.4.0-rc1.md
+++ b/_posts/2015-04-09-hangfire-1.4.0-rc1.md
@@ -6,6 +6,8 @@ version: Hangfire 1.4.0-rc1
 author: odinserj
 ---
 
+This is a pre-release version of Hangfire 1.4.0 that is considered to be stable.
+
 #### Hangfire.Core:
 * **Added** – Add a notice about failed jobs expiration time.
 * **Added** – Show warnings in Dashboard for jobs processing by inactive servers.
