Simplify the post creation

--- a/_posts/2014-05-17-hangfire-0.8.1-released.md
+++ b/_posts/2014-05-17-hangfire-0.8.1-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 0.8.1 released
+title: Hangfire 0.8.1
 category: release
-version: Hangfire 0.8.1
 author: odinserj
 redirect_from:
 - /release/2014/05/17/hangfire-0.8.1-released.html
