--- a/_posts/2014-05-21-hangfire-0.8.2-released.md
+++ b/_posts/2014-05-21-hangfire-0.8.2-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 0.8.2 Released
+title: Hangfire 0.8.2
 category: release
-version: Hangfire 0.8.2
 author: odinserj
 redirect_from:
 - /release/2014/05/21/hangfire-0.8.2-released.html
