--- a/_posts/2014-05-02-hangfire-0.8-released.md
+++ b/_posts/2014-05-02-hangfire-0.8-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 0.8 Released
+title: Hangfire 0.8.0
 category: release
-version: Hangfire 0.8.0
 author: odinserj
 redirect_from:
 - /release/2014/05/02/hangfire-0.8-released.html
