--- a/_posts/2014-05-23-hangfire-0.8.3-released.md
+++ b/_posts/2014-05-23-hangfire-0.8.3-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 0.8.3 Released
+title: Hangfire 0.8.3
 category: release
-version: Hangfire 0.8.3
 author: odinserj
 redirect_from:
 - /release/2014/05/23/hangfire-0.8.3-released.html
