--- a/_posts/2014-06-07-hangfire-0.9-released.md
+++ b/_posts/2014-06-07-hangfire-0.9-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 0.9 Released
+title: Hangfire 0.9.0
 category: release
-version: Hangfire 0.9.0
 author: odinserj
 redirect_from:
 - /release/2014/06/07/hangfire-0.9-released.html
