--- a/_posts/2014-12-10-hangfire-1.3.0-released.md
+++ b/_posts/2014-12-10-hangfire-1.3.0-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 1.3.0 Released
+title: Hangfire 1.3.0
 category: release
-version: Hangfire 1.3.0
 author: odinserj
 redirect_from:
 - /release/2014/12/10/hangfire-1.3.0-released.html
