--- a/_posts/2015-01-27-hangfire-1.3.2-released.md
+++ b/_posts/2015-01-27-hangfire-1.3.2-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 1.3.2 Released
+title: Hangfire 1.3.2
 category: release
-version: Hangfire 1.3.2
 author: odinserj
 redirect_from: 
 - /release/2015/01/27/hangfire-1.3.2-released.html
