--- a/_posts/2015-01-29-hangfire-1.3.3-released.md
+++ b/_posts/2015-01-29-hangfire-1.3.3-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 1.3.3 Released
+title: Hangfire 1.3.3
 category: release
-version: Hangfire 1.3.3
 author: odinserj
 redirect_from: 
 - /release/2015/01/29/hangfire-1.3.3-released.html
