--- a/_posts/2015-02-04-hangfire-1.3.4-released.md
+++ b/_posts/2015-02-04-hangfire-1.3.4-released.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: Hangfire 1.3.4 Released
+title: Hangfire 1.3.4
 category: release
-version: Hangfire 1.3.4
 author: odinserj
 redirect_from: 
 - /release/2015/02/04/hangfire-1.3.4-released.html
